// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/widgets/badges/Badge should match the snapshot on show 1`] = `
<div
  className="Badge"
>
  <div
    className="Badge__box test Badge--xs"
  >
    Test text
  </div>
</div>
`;

exports[`components/widgets/badges/Badge should match the snapshot on size 1`] = `
<div
  className="Badge"
>
  <div
    className="Badge__box Badge--lg"
  >
    Test text
  </div>
</div>
`;

exports[`components/widgets/badges/Badge should match the snapshot on uppercase 1`] = `
<div
  className="Badge"
>
  <div
    className="Badge__box Badge--xs Badge--uppercase"
  >
    Test text
  </div>
</div>
`;

exports[`components/widgets/badges/Badge should match the snapshot on variant 1`] = `
<div
  className="Badge"
>
  <div
    className="Badge__box success Badge--xs"
  >
    Test text
  </div>
</div>
`;

exports[`components/widgets/badges/Badge should transform into a button if onClick provided 1`] = `
<div
  className="Badge"
>
  <button
    className="Badge__box Badge--xs"
    onClick={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  >
    Test text
  </button>
</div>
`;
